메인페이지에 게임 추가

--- a/main.html
+++ b/main.html
@@ -12,25 +12,32 @@
 <body>
 <div class="row no-gutters">
     <div class="col-md-6 no-gutters">
-        <div class="leftside d-flex justify-content-center align-items-center">
-            <h1>Wordpress</h1>
-        </div>
+        <a href="https://mit-games.kr/wordpress">
+            <div class="leftside d-flex justify-content-center align-items-center">
+                <h1>Wordpress</h1>
+            </div>
+        </a>
     </div>
 
     <div class="col-md-6 no-gutters">
-        <div class="rightside d-flex justify-content-center align-items-center">
-            <h1>Mediawiki</h1>
-        </div>
+        <a href="https://mit-games.kr/mediawiki">
+            <div class="rightside d-flex justify-content-center align-items-center">
+                <h1>Mediawiki</h1>
+            </div>
+        </a>
     </div>
 </div>
 <div class="logo">
-    <img src="mit-games-mini.png">
+    <!-- <img src="mit-games-mini.png"> -->
+    <h3><font style="color:#FF0000">M</font>.I.T. games</h3>
 </div>
 <div class="circle d-flex justify-content-center align-items-center">
     <h1>Want Game?</h1>
 </div>
-<canvas id="canvas">
-</canvas>
+
+<div class='canvasbox'>
+    <canvas id="canvas">
+</div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
